more debuggame vibe coding vibecoding vibe coding2 . . .. vibe coding maxx

--- a/Maple2.Server.DebugGame/Maple2.Server.DebugGame.csproj
+++ b/Maple2.Server.DebugGame/Maple2.Server.DebugGame.csproj
@@ -37,4 +37,9 @@
     <Folder Include="Textures\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ClCompile Include="Shaders\wireframePixel.hlsl" />
+    <ClCompile Include="Shaders\wireframeVertex.hlsl" />
+  </ItemGroup>
+
 </Project>
