--- a/Maple2.Server.DebugGame/Maple2.Server.DebugGame.csproj
+++ b/Maple2.Server.DebugGame/Maple2.Server.DebugGame.csproj
@@ -38,8 +38,24 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ClCompile Include="Shaders\wireframePixel.hlsl" />
-    <ClCompile Include="Shaders\wireframeVertex.hlsl" />
+    <Content Include="Shaders\pixelInput.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\screenPixel.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\screenVertex.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\vertexAttributes.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\wireframePixel.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\wireframeVertex.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
