--- a/Maple2.Server.DebugGame/Maple2.Server.DebugGame.csproj
+++ b/Maple2.Server.DebugGame/Maple2.Server.DebugGame.csproj
@@ -8,15 +8,7 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="root_path.txt" />
-  </ItemGroup>
 
-  <ItemGroup>
-    <Content Include="root_path.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Maple2.ImGui.NET" Version="1.91.0.3" />
@@ -54,6 +46,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Shaders\wireframeVertex.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Textures\sample_derp_wave.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
