--- a/compose.yml
+++ b/compose.yml
@@ -18,120 +18,6 @@ services:
       - ${MS2_DOCKER_DATA_FOLDER}:/ClientData
       - dotnet_tools:/root/.dotnet/tools
 
-  login:
-    build:
-      context: .
-      dockerfile: ./Maple2.Server.Login/Dockerfile
-    container_name: maple2-login
-    image: maple2/login
-    command: dotnet Maple2.Server.Login.dll
-    depends_on:
-      mysql:
-        condition: service_started
-      world:
-        condition: service_started
-    ports:
-      - 20001:20001
-    links:
-      - world
-    env_file:
-      - .env
-    environment:
-      DB_IP: mysql
-      GRPC_WORLD_IP: world
-
-  world:
-    build:
-      context: .
-      dockerfile: ./Maple2.Server.World/Dockerfile
-    container_name: maple2-world
-    image: maple2/world
-    command: dotnet Maple2.Server.World.dll
-    depends_on:
-      - mysql
-    ports:
-      - 21001:21001
-    env_file:
-      - .env
-    environment:
-      DB_IP: mysql
-
-  game-ch1:
-    build:
-      context: .
-      dockerfile: ./Maple2.Server.Game/Dockerfile
-    image: maple2/game
-    depends_on:
-      - mysql
-      - world
-    # Ports are dynamically assigned from world server, sadly we can't dynamically expose them here. So we have to hardcode them.
-    ports:
-      - 20003:20003
-      - 21003:21003
-    env_file:
-      - .env
-    environment:
-      DB_IP: mysql
-      GRPC_GAME_IP: game-ch1
-      GRPC_WORLD_IP: world
-
-  game-ch2:
-    build:
-      context: .
-      dockerfile: ./Maple2.Server.Game/Dockerfile
-    image: maple2/game
-    depends_on:
-      - mysql
-      - world
-    # Ports are dynamically assigned from world server, sadly we can't dynamically expose them here. So we have to hardcode them.
-    ports:
-      - 20004:20004
-      - 21004:21004
-    env_file:
-      - .env
-    environment:
-      DB_IP: mysql
-      GRPC_GAME_IP: game-ch2
-      GRPC_WORLD_IP: world
-
-  # Channel 0 is instanced content only
-  game-ch0:
-    build:
-      context: .
-      dockerfile: ./Maple2.Server.Game/Dockerfile
-    image: maple2/game
-    depends_on:
-      - mysql
-      - world
-    # Ports are dynamically assigned from world server, sadly we can't dynamically expose them here. So we have to hardcode them.
-    ports:
-      - 20002:20002
-      - 21002:21002
-    env_file:
-      - .env
-    environment:
-      DB_IP: mysql
-      GRPC_GAME_IP: game-ch0
-      GRPC_WORLD_IP: world
-      INSTANCED_CONTENT: true
-
-  web:
-    build:
-      context: .
-      dockerfile: ./Maple2.Server.Web/Dockerfile
-    container_name: maple2-web
-    image: maple2/web
-    depends_on:
-      - mysql
-    ports:
-      - 80:80
-      - 443:443
-      - 4000:4000
-    env_file:
-      - .env
-    environment:
-      DB_IP: mysql
-
   mysql:
     image: mysql:8.0
     restart: unless-stopped
@@ -144,6 +30,146 @@ services:
       - mysql:/var/lib/mysql
     ports:
       - 3306:3306
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -uroot -p$${MYSQL_ROOT_PASSWORD} || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
+      start_period: 10s
+
+  web:
+    build:
+      context: .
+      dockerfile: ./Maple2.Server.Web/Dockerfile
+    container_name: maple2-web
+    image: maple2/web
+    depends_on:
+      - mysql
+    # no .env file mounted; use env_file + overrides
+    ports:
+      - 80:80
+      - 443:443
+      - 4000:4000
+    env_file:
+      - .env
+    environment:
+      DB_IP: mysql
+
+  world:
+    build:
+      context: .
+      dockerfile: ./Maple2.Server.World/Dockerfile
+    container_name: maple2-world
+    image: maple2/world
+    command: dotnet Maple2.Server.World.dll
+    depends_on:
+      mysql:
+        condition: service_healthy
+    # no .env file mounted; use env_file + overrides
+    ports:
+      - 21001:21001
+    env_file:
+      - .env
+    environment:
+      DB_IP: mysql
+      GRPC_LOGIN_IP: login
+    restart: unless-stopped
+    healthcheck:
+      # simple TCP check on gRPC port (HTTP/2 only)
+      test: ["CMD-SHELL", "bash -c 'exec 3<>/dev/tcp/127.0.0.1/21001' || exit 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
+      start_period: 5s
+
+  login:
+    build:
+      context: .
+      dockerfile: ./Maple2.Server.Login/Dockerfile
+    container_name: maple2-login
+    image: maple2/login
+    command: dotnet Maple2.Server.Login.dll
+    depends_on:
+      mysql:
+        condition: service_healthy
+      world:
+        condition: service_healthy
+    # no .env file mounted; use env_file + overrides
+    ports:
+      - 20001:20001
+    links:
+      - world
+    env_file:
+      - .env
+    environment:
+      DB_IP: mysql
+      GRPC_WORLD_IP: world
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "bash -c 'exec 3<>/dev/tcp/127.0.0.1/21000' || exit 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
+      start_period: 10s
+
+  game-ch0:
+    build:
+      context: .
+      dockerfile: ./Maple2.Server.Game/Dockerfile
+    image: maple2/game
+    depends_on:
+      mysql:
+        condition: service_healthy
+      world:
+        condition: service_healthy
+    # no .env file mounted; use env_file + overrides
+    ports:
+      - 20002:20002
+      - 21002:21002
+    env_file:
+      - .env
+    environment:
+      DB_IP: mysql
+      INSTANCED_CONTENT: true
+      GRPC_WORLD_IP: world
+      GRPC_GAME_IP: game-ch0
+    restart: unless-stopped
+    healthcheck:
+      # gRPC channel port for ch0 is 21002
+      test: ["CMD-SHELL", "bash -c 'exec 3<>/dev/tcp/127.0.0.1/21002' || exit 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
+      start_period: 10s
+
+  game-ch1:
+    build:
+      context: .
+      dockerfile: ./Maple2.Server.Game/Dockerfile
+    image: maple2/game
+    depends_on:
+      mysql:
+        condition: service_healthy
+      world:
+        condition: service_healthy
+    # no .env file mounted; use env_file + overrides
+    ports:
+      - 20003:20003
+      - 21003:21003
+    env_file:
+      - .env
+    environment:
+      DB_IP: mysql
+      GRPC_WORLD_IP: world
+      GRPC_GAME_IP: game-ch1
+    restart: unless-stopped
+    healthcheck:
+      # gRPC channel port for ch1 is 21003
+      test: ["CMD-SHELL", "bash -c 'exec 3<>/dev/tcp/127.0.0.1/21003' || exit 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
+      start_period: 10s
 
 volumes:
   dotnet_tools:
