chore(root): Adds configuration-based environments.

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ GRPC_WORLD_PORT=21001
 
 WEB_IP=127.0.0.1
 WEB_PORT=4000
+
+# Optional: override path to YAML server config
+# CONFIG_PATH=./config.yaml
