--- a/Maple2.Server.Core/Maple2.Server.Core.csproj
+++ b/Maple2.Server.Core/Maple2.Server.Core.csproj
@@ -23,6 +23,7 @@
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
         <PackageReference Include="System.IO.Pipelines" Version="7.0.0" />
+        <PackageReference Include="YamlDotNet" Version="15.3.0" />
     </ItemGroup>
 
     <ItemGroup>
