--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,6 @@ MS2_DATA_FOLDER=C:/Nexon/Library/maplestory2/Data/
 LANGUAGE=EN
 
 # Database connection
-
 DB_IP=localhost
 DB_PORT=3306
 DB_USER=root
@@ -18,6 +17,7 @@ DATA_DB_NAME=maple-data
 GAME_DB_NAME=game-server
 
 # Maple2.Server - Only needed if hosting for external access
+CONFIG_PATH=./config.yaml
 
 GAME_IP=127.0.0.1
 LOGIN_IP=127.0.0.1
@@ -28,6 +28,3 @@ GRPC_WORLD_PORT=21001
 
 WEB_IP=127.0.0.1
 WEB_PORT=4000
-
-# Optional: override path to YAML server config
-# CONFIG_PATH=./config.yaml
