--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,4 @@ FodyWeavers.xsd
 .idea/.idea.Maple2/.idea/dataSources.xml
 /Maple2.Server.Game/DebugTriggers
 .idea/.idea.Maple2/.idea/AugmentWebviewStateStore.xml
+/.idea/.idea.Maple2/.idea
